--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <hr />
     <h2 style="text-align: center;">Summary</h2>
     <ul>
-        <li>Proactive ans self-motivated with the ability to multi-task and function within the current fast pace deadline-driven environment.</li>
+        <li>Proactive and self-motivated with the ability to multi-task and function within the current fast pace deadline-driven environment.</li>
         <li>A team player and result oriented on the notion to get work done on time.</li>
         <li>Fast learner and able to understand issues to provide the requisite solutions for the problem.</li>
         <li>Good interpersonal relations and good communication skils.</li>
