--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>My Resume</title>
 </head>
 <body style="background-color:ghostwhite;">
-    <p align = "center"><img src="./images/picture01.jpg" alt="Profile Picture" height="200" /></p>
+    <p align = "center"><img src="./images/picture001.webp" alt="Profile Picture" height="200" /></p>
 
     <h1 style="text-align: center;">Edwin K. Frimpong Manso</h1>
     <hr />
